--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     working_dir: /opt/gitbook/doc
     volumes:
       - ./doc:/opt/gitbook/doc
-    command:
+    command: >
       bash -c
       "
       if [ ! -f SUMMARY.md ]; then gitbook init; fi &&
